This is the first time we are getting some sort of data

--- a/README
+++ b/README
@@ -1,10 +1,15 @@
 The goal of this game is to move the car from S to F. "." are valid road spaces. Every move is -1. Going off road is -5, and you will ricochet off on the road depending on how you hit the road.
 
 in the main directory run:
-	g++ game/main.cpp game.cpp -o race
+	cd game/
+	make
+	cd ../
 
 usage
-	./race <race-name>
+	./race-track <race-name> <starting e value> <number of games>
 
 default is "race.dat" file
 create a track based on that file
+
+Notes:
+	There is some learning that is happening, some results are in the results/ directory, however, it does not seem to be typical of montecarlo
